# versioned-sphinx

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: conf.py  index.rst  package.rst
src/versioned_sphinx/: __init__.py  config.py  ext.py  git.py  logger.py  sphinx.py
src/versioned_sphinx/static/: sphinx_rtd_theme.css  versioned_sphinx.css  versioned_sphinx.js
tests/: test.py
