[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "versioned-sphinx"
dependencies = []
requires-python = ">=3.8"
authors = [
  {name = "Jacob Morris", email = "blendingjake@gmail.com"}
]
description = "Versioned documentation with Sphinx"
readme = "README.md"
license = "MIT"
license-files = ["LICEN[CS]E.*"]
keywords = ["sphinx", "documentation", "versioned", "docs"]
classifiers = [
  "Programming Language :: Python"
]

[project.optional-dependencies]
dev = [
    "black==25.1.0",
    "hatch==1.14.1",
    "pylint==3.3.7"
]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
"Bug Tracker" = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.scripts]
versioned-sphinx-cli = "versioned_sphinx"

[too.hatch.version]
path = "src/versioned-sphinx/_version.py"